--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   http: ^1.2.1
   dio: ^5.4.3+1
   get: ^4.6.6
-
+  wallpaper_manager: ^1.0.10 
+  flutter_cache_manager: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
