--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   http: ^1.2.1
   dio: ^5.4.3+1
   get: ^4.6.6
-  wallpaper_manager: ^1.0.10 
-  flutter_cache_manager: 
+  flutter_cache_manager: ^3.3.2
+  flutter_wallpaper_manager: ^0.0.4
+
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
