--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get: ^4.6.6
   flutter_cache_manager: ^3.3.2
   flutter_wallpaper_manager: ^0.0.4
+  google_fonts: ^6.2.1
 
   
 dev_dependencies:
